# chatApp

./: LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: backend.yml  codeql-analysis.yml  docker-image.yml  docker-publish.yml  frontend.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  test.db
backend/src/: settings.py
backend/src/app/: app.py
backend/src/app/exceptions/: alreadyingroup.py  handler.py  notingroup.py  wrongcredentials.py  wronguser.py
backend/src/app/logic/: groups_logic.py  messages_logic.py  object_to_return_object.py  users_logic.py
backend/src/app/routers/: __init__.py  users.py
backend/src/app/routers/groups/: __init__.py  groups.py
backend/src/app/routers/groups/messages/: __init__.py  messages.py
backend/src/app/routers/users/: users.py
backend/src/app/schemas/: group.py  message.py  user.py
backend/src/app/utils/: dependencies.py  websockets.py
backend/src/database/: database.py  models.py
backend/src/database/crud/: group.py  message.py  user.py
backend/tests/: conftest.py
backend/tests/test_app/test_logic/: test_groups_logic.py  test_messages_logic.py  test_users_logic.py
backend/tests/test_app/test_routers/: test_users.py
backend/tests/test_app/test_routers/test_groups/: test_groups.py
backend/tests/test_app/test_routers/test_groups/test_messages/: test_messages.py
backend/tests/test_database/test_crud/: test_group.py  test_message.py  test_user.py
backend/tests/utils/authorization/: auth_client.py
frontend/chat-app/: package-lock.json  package.json
frontend/chat-app/src/: App.tsx
frontend/chat-app/src/components/: Login.tsx  MainView.tsx
frontend/chat-app/src/components/ui/: scroll-area.tsx
frontend/chat-app/src/data/interfaces/: index.ts
frontend/chat-app/src/utils/api/: messages.ts
frontend/frontend-chatapp/: package-lock.json  package.json
frontend/frontend-chatapp/src/: App.tsx  main.tsx
frontend/frontend-chatapp/src/components/: Button.tsx  GroupItemComponent.tsx  LeftSideBar.tsx  LoginFormComponent.tsx  LoginOrRegisterComponent.tsx  MainComponent.tsx  MessageComponent.tsx  NavBarComponent.tsx  RegisterFromComponent.tsx  UserCardComponent.tsx  messageViewComponent.tsx
frontend/frontend-chatapp/src/data/enums/: index.ts  local-storage.ts
frontend/frontend-chatapp/src/data/interfaces/: group.ts  message.ts  user.ts
frontend/frontend-chatapp/src/utils/api/: api.ts  messages.ts  user.ts
frontend/frontend-chatapp/src/utils/local-storage.ts/: auth.ts
tests/: pom.xml
tests/src/main/java/chatapp/api/: BaseApi.java
tests/src/main/java/chatapp/dto/: Group.java  (+2 more)
tests/src/test/java/chatapp/: RunCucumberTest.java
(+9 files in other folders)
