[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["WardM99 <wardmeersman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlmodel = "^0.0.14"
aiosqlite = "^0.19.0"
environs = "^10.0.0"
pytest-env = "^1.1.3"
python-jose = "^3.3.0"
passlib = {extras = ["bycrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
types-passlib = "^1.7.7.13"
types-python-jose = "^3.3.4.8"
aiohttp = "^3.9.1"
httpx = "^0.26.0"
requests = "^2.31.0"
websockets = "^12.0"
pyhumps = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pylint = "^3.0.2"
mypy = "^1.7"
pytest-asyncio = "^0.23.2"
coverage = "^7.3.3"

[tool.pylint.main]
min-public-methods=1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
